2003-01-10  Dave Love  <fx@gnu.org>

	* composite.c (syms_of_composite): Make composition_hash_table
	weak.

2003-01-09  Kim F. Storm  <storm@cua.dk>

	* process.c (Fmake_network_process): Convert new port number
	to host byte order for `:service t' case.  From Mario Lang.

2003-01-08  Jan D.  <jan.h.d@swipnet.se>

	* xfns.c (Fx_file_dialog): Call XtAppNextEvent and x_dispatch_event
	instead of XtAppProcessEvent.

	* xterm.c (handle_one_xevent): New function
	(x_dispatch_event): New function
	(XTread_socket): Call handle_one_xevent.

	* xterm.h (FRAME_OUTER_TO_INNER_DIFF_X/Y): Added

	* xmenu.c (Fx_popup_menu): If popping up at mouse position,
	call XQueryPointer to get coordinates.
	(popup_get_selection): Do not set popup_activated_flag to zero,
	let popup_deactivate_callback do that.  Needed for Motif.
	Call x_dispatch_event instead of XtDispatchEvent.
	(xmenu_show): Calculate root coordinate from frame top/left position.
	

2003-01-08  Kim F. Storm  <storm@cua.dk>

	* process.c (server_accept_connection): Fixed recording of new
	connection's local address in :local property of contact info.
	(Fmake_network_process): Record local network address for new
	client processes in :local property of contact info.
	(format-network-address): Added arg OMIT-PORT.  Callers changed.

2003-01-07  Dave Love  <fx@gnu.org>

	* Makefile.in (fns.o): Depend on coding.h.

2003-01-07  Markus Rost  <rost@math.ohio-state.edu>

	* minibuf.c (Fread_variable): Doc fix.

	* eval.c (Fuser_variable_p): Doc change.  For custom variables,
	use the same test as for custom-variable-p.

2003-01-05  Richard M. Stallman  <rms@gnu.org>

	* xdisp.c (try_scrolling): New arg LAST_LINE_MISFIT.
	Count LAST_LINE_MISFIT in scroll margin for end of window.
	Move label too_near_end before setting SCROLL_MARGIN_POS.
	Set LAST_LINE_MISFIT before jumping there.
	
	* xdisp.c (try_scrolling): Calculate amount_to_scroll better in
	scroll_conservatively case.  If scrolling that much doesn't change